syntax = "proto3";

package deploy.v1;

import "vcs/v1/config.proto";

option go_package = "github.com/powertoolsdev/protos/components/generated/types/deploy/v1";

// HelmSourceConfig represents a public helm chart
message HelmSourceConfig {
  vcs.v1.Config vcs_cfg = 1;
}
